replaced pet with uas type
