# docs/demo/openapi.yaml
@@ -1,14 +1,14 @@
 openapi: 3.0.2
 info:
   title: Pushpaka Registry
-  description: "This is a sample Pet Store Server based on the OpenAPI 3.0 specification.\
+  description: "This is a sample UasType Store Server based on the OpenAPI 3.0 specification.\
     \  You can find out more about\nSwagger at [http://swagger.io](http://swagger.io).\
-    \ In the third iteration of the pet store, we've switched to the design first\
+    \ In the third iteration of the uasType store, we've switched to the design first\
     \ approach!\nYou can now help us improve the API whether it's by making changes\
     \ to the definition itself or to the code.\nThat way, with time, we can improve\
     \ the API in general, and expose some of the new features in OAS3.\n\nSome useful\
-    \ links:\n- [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)\n\
-    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)"
+    \ links:\n- [The UasType Store repository](https://github.com/swagger-api/swagger-petstore)\n\
+    - [The source API definition for the UasType Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)"
   termsOfService: http://swagger.io/terms/
   contact:
     email: sayandeep@ispirt.in
@@ -22,38 +22,30 @@ externalDocs:
 servers:
 - url: /api/v1
 tags:
-- name: pet
-  description: Everything about your Pets
-  externalDocs:
-    description: Find out more
-    url: http://swagger.io
-- name: store
-  description: Access to Petstore orders
-  externalDocs:
-    description: Find out more about our store
-    url: http://swagger.io
+- name: uas_type
+  description: UAS Types
 - name: user
   description: Operations about user
 paths:
-  /pet:
+  /uasType:
     put:
       tags:
-      - pet
-      summary: Update an existing pet
-      description: Update an existing pet by Id
-      operationId: updatePet
+      - uas_types
+      summary: Update an existing uasType
+      description: Update an existing uasType by Id
+      operationId: updateUasType
       requestBody:
-        description: Update an existent pet in the store
+        description: Update an existent uasType in the store
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
         required: true
       responses:
         "200":
@@ -61,38 +53,38 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
         "400":
           description: Invalid ID supplied
         "404":
-          description: Pet not found
+          description: UasType not found
         "405":
           description: Validation exception
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
     post:
       tags:
-      - pet
-      summary: Add a new pet to the store
-      description: Add a new pet to the store
-      operationId: addPet
+      - uas_types
+      summary: Add a new uasType to the store
+      description: Add a new uasType to the store
+      operationId: addUasType
       requestBody:
-        description: Create a new pet in the store
+        description: Create a new uasType in the store
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: '#/components/schemas/UasType'
         required: true
       responses:
         "200":
@@ -100,23 +92,23 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
         "405":
           description: Invalid input
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/findByStatus:
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
+  /uasType/findByStatus:
     get:
       tags:
-      - pet
-      summary: Finds Pets by status
+      - uas_types
+      summary: Finds UasTypes by status
       description: Multiple status values can be provided with comma separated strings
-      operationId: findPetsByStatus
+      operationId: findUasTypesByStatus
       parameters:
       - name: status
         in: query
@@ -138,26 +130,26 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: '#/components/schemas/UasType'
         "400":
           description: Invalid status value
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/findByTags:
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
+  /uasType/findByTags:
     get:
       tags:
-      - pet
-      summary: Finds Pets by tags
+      - uas_types
+      summary: Finds UasTypes by tags
       description: "Multiple tags can be provided with comma separated strings. Use\
         \ tag1, tag2, tag3 for testing."
-      operationId: findPetsByTags
+      operationId: findUasTypesByTags
       parameters:
       - name: tags
         in: query
@@ -176,29 +168,29 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: '#/components/schemas/UasType'
         "400":
           description: Invalid tag value
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/{petId}:
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
+  /uasType/{uasTypeId}:
     get:
       tags:
-      - pet
-      summary: Find pet by ID
-      description: Returns a single pet
-      operationId: getPetById
+      - uas_types
+      summary: Find uasType by ID
+      description: Returns a single uasType
+      operationId: getUasTypeById
       parameters:
-      - name: petId
+      - name: uasTypeId
         in: path
-        description: ID of pet to return
+        description: ID of uasType to return
         required: true
         schema:
           type: integer
@@ -209,56 +201,56 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/UasType'
         "400":
           description: Invalid ID supplied
         "404":
-          description: Pet not found
+          description: UasType not found
       security:
       - api_key: []
-      - petstore_auth:
-        - write:pets
-        - read:pets
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
     post:
       tags:
-      - pet
-      summary: Updates a pet in the store with form data
+      - uas_types
+      summary: Updates a uasType in the store with form data
       description: ""
-      operationId: updatePetWithForm
+      operationId: updateUasTypeWithForm
       parameters:
-      - name: petId
+      - name: uasTypeId
         in: path
-        description: ID of pet that needs to be updated
+        description: ID of uasType that needs to be updated
         required: true
         schema:
           type: integer
           format: int64
       - name: name
         in: query
-        description: Name of pet that needs to be updated
+        description: Name of uasType that needs to be updated
         schema:
           type: string
       - name: status
         in: query
-        description: Status of pet that needs to be updated
+        description: Status of uasType that needs to be updated
         schema:
           type: string
       responses:
         "405":
           description: Invalid input
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
     delete:
       tags:
-      - pet
-      summary: Deletes a pet
+      - uas_types
+      summary: Deletes a uasType
       description: ""
-      operationId: deletePet
+      operationId: deleteUasType
       parameters:
       - name: api_key
         in: header
@@ -266,31 +258,31 @@ paths:
         required: false
         schema:
           type: string
-      - name: petId
+      - name: uasTypeId
         in: path
-        description: Pet id to delete
+        description: UasType id to delete
         required: true
         schema:
           type: integer
           format: int64
       responses:
         "400":
-          description: Invalid pet value
+          description: Invalid uasType value
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/{petId}/uploadImage:
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
+  /uasType/{uasTypeId}/uploadImage:
     post:
       tags:
-      - pet
+      - uas_types
       summary: uploads an image
       description: ""
       operationId: uploadFile
       parameters:
-      - name: petId
+      - name: uasTypeId
         in: path
-        description: ID of pet to update
+        description: ID of uasType to update
         required: true
         schema:
           type: integer
@@ -315,14 +307,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
       security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
+      - registry_auth:
+        - write:uasTypes
+        - read:uasTypes
   /store/inventory:
     get:
       tags:
       - store
-      summary: Returns pet inventories by status
+      summary: Returns uasType inventories by status
       description: Returns a map of status codes to quantities
       operationId: getInventory
       responses:
@@ -341,7 +333,7 @@ paths:
     post:
       tags:
       - store
-      summary: Place an order for a pet
+      summary: Place an order for a uasType
       description: Place a new order in the store
       operationId: placeOrder
       requestBody:
@@ -606,7 +598,7 @@ components:
           type: integer
           format: int64
           example: 10
-        petId:
+        uasTypeId:
           type: integer
           format: int64
           example: 198772
@@ -679,9 +671,6 @@ components:
         email:
           type: string
           example: john@email.com
-        password:
-          type: string
-          example: "12345"
         phone:
           type: string
           example: "12345"
@@ -690,8 +679,12 @@ components:
           description: User Status
           format: int32
           example: 1
-      xml:
-        name: user
+      required:
+        - id
+        - username
+        - email
+        - firstName
+        - lastName
     Tag:
       type: object
       properties:
@@ -702,44 +695,28 @@ components:
           type: string
       xml:
         name: tag
-    Pet:
-      required:
-      - name
-      - photoUrls
+    UasType:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 10
-        name:
           type: string
-          example: doggie
-        category:
-          $ref: '#/components/schemas/Category'
-        photoUrls:
-          type: array
-          xml:
-            wrapped: true
-          items:
-            type: string
-            xml:
-              name: photoUrl
-        tags:
-          type: array
-          xml:
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Tag'
-        status:
+          format: uuid
+        modelNumber:
           type: string
-          description: pet status in the store
-          enum:
-          - available
-          - pending
-          - sold
-      xml:
-        name: pet
+        manufacturer:
+          $ref: '#/components/schemas/Manufacturer'
+        propulsionCategory:
+          $ref: '#/components/schemas/UasPropulsionCategory'
+        mass:
+          type: number
+          format: integer
+          description: maximum take off mass in grams
+      required:
+        - id
+        - manufacturer
+        - mass
+        - modelNumber
+        - propulsionCategory
     ApiResponse:
       type: object
       properties:
@@ -826,6 +803,13 @@ components:
           type: number
           minimum: 100000
           maximum: 999999
+      required:
+        - line1
+        - line2
+        - line3
+        - city
+        - state
+        - pinCode
     LegalEntity:
       type: object
       properties:
@@ -838,10 +822,13 @@ components:
           type: string
         regdAddress:
           $ref: '#/components/schemas/Address'
+        gstin:
+          type: string
       required:
         - id
         - name
         - regdAddress
+        - cin
     Manufacturer:
       type: object
       properties:
@@ -877,15 +864,6 @@ components:
         - id
         - legalEntity
   requestBodies:
-    Pet:
-      description: Pet object that needs to be added to the store
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Pet'
-        application/xml:
-          schema:
-            $ref: '#/components/schemas/Pet'
     UserArray:
       description: List of user object
       content:
@@ -895,14 +873,14 @@ components:
             items:
               $ref: '#/components/schemas/User'
   securitySchemes:
-    petstore_auth:
+    registry_auth:
       type: oauth2
       flows:
         implicit:
           authorizationUrl: https://petstore3.swagger.io/oauth/authorize
           scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
+            write:uasTypes: modify uasTypes in your account
+            read:uasTypes: read your uasTypes
     api_key:
       type: apiKey
       name: api_key
